# src/services/openapi.yml
@@ -65,7 +65,7 @@ paths:
         '422':
           $ref: '#/components/responses/GenericError'
       security:
-        - Token: [ ]
+        - Token: []
     put:
       tags:
         - User and Authentication
@@ -82,7 +82,7 @@ paths:
         '422':
           $ref: '#/components/responses/GenericError'
       security:
-        - Token: [ ]
+        - Token: []
       x-codegen-request-body-name: body
   /profiles/{username}:
     get:
@@ -127,7 +127,7 @@ paths:
         '422':
           $ref: '#/components/responses/GenericError'
       security:
-        - Token: [ ]
+        - Token: []
     delete:
       tags:
         - Profile
@@ -149,13 +149,14 @@ paths:
         '422':
           $ref: '#/components/responses/GenericError'
       security:
-        - Token: [ ]
+        - Token: []
   /articles/feed:
     get:
       tags:
         - Articles
       summary: Get recent articles from users you follow
-      description: Get most recent articles from users you follow. Use query parameters
+      description:
+        Get most recent articles from users you follow. Use query parameters
         to limit. Auth is required
       operationId: GetArticlesFeed
       parameters:
@@ -169,13 +170,14 @@ paths:
         '422':
           $ref: '#/components/responses/GenericError'
       security:
-        - Token: [ ]
+        - Token: []
   /articles:
     get:
       tags:
         - Articles
       summary: Get recent articles globally
-      description: Get most recent articles globally. Use query parameters to filter
+      description:
+        Get most recent articles globally. Use query parameters to filter
         results. Auth is optional
       operationId: GetArticles
       parameters:
@@ -219,7 +221,7 @@ paths:
         '422':
           $ref: '#/components/responses/GenericError'
       security:
-        - Token: [ ]
+        - Token: []
       x-codegen-request-body-name: article
   /articles/{slug}:
     get:
@@ -263,7 +265,7 @@ paths:
         '422':
           $ref: '#/components/responses/GenericError'
       security:
-        - Token: [ ]
+        - Token: []
       x-codegen-request-body-name: article
     delete:
       tags:
@@ -286,7 +288,7 @@ paths:
         '422':
           $ref: '#/components/responses/GenericError'
       security:
-        - Token: [ ]
+        - Token: []
   /articles/{slug}/comments:
     get:
       tags:
@@ -331,7 +333,7 @@ paths:
         '422':
           $ref: '#/components/responses/GenericError'
       security:
-        - Token: [ ]
+        - Token: []
       x-codegen-request-body-name: comment
   /articles/{slug}/comments/{id}:
     delete:
@@ -361,7 +363,7 @@ paths:
         '422':
           $ref: '#/components/responses/GenericError'
       security:
-        - Token: [ ]
+        - Token: []
   /articles/{slug}/favorite:
     post:
       tags:
@@ -384,7 +386,7 @@ paths:
         '422':
           $ref: '#/components/responses/GenericError'
       security:
-        - Token: [ ]
+        - Token: []
     delete:
       tags:
         - Favorites
@@ -406,7 +408,7 @@ paths:
         '422':
           $ref: '#/components/responses/GenericError'
       security:
-        - Token: [ ]
+        - Token: []
   /tags:
     get:
       tags:
@@ -662,40 +664,7 @@ components:
               articles:
                 type: array
                 items:
-                  required:
-                    - author
-                    - createdAt
-                    - description
-                    - favorited
-                    - favoritesCount
-                    - slug
-                    - tagList
-                    - title
-                    - updatedAt
-                  type: object
-                  properties:
-                    slug:
-                      type: string
-                    title:
-                      type: string
-                    description:
-                      type: string
-                    tagList:
-                      type: array
-                      items:
-                        type: string
-                    createdAt:
-                      type: string
-                      format: date-time
-                    updatedAt:
-                      type: string
-                      format: date-time
-                    favorited:
-                      type: boolean
-                    favoritesCount:
-                      type: integer
-                    author:
-                      $ref: '#/components/schemas/Profile'
+                  $ref: '#/components/schemas/Article'
               articlesCount:
                 type: integer
     ProfileResponse:
@@ -722,10 +691,10 @@ components:
                 $ref: '#/components/schemas/User'
     EmptyOkResponse:
       description: No content
-      content: { }
+      content: {}
     Unauthorized:
       description: Unauthorized
-      content: { }
+      content: {}
     GenericError:
       description: Unexpected error
       content:
@@ -826,7 +795,8 @@ components:
   securitySchemes:
     Token:
       type: apiKey
-      description: "For accessing the protected API resources, you must have received\
+      description:
+        "For accessing the protected API resources, you must have received\
         \ a a valid JWT token after registering or logging in. This JWT token must\
         \ then be used for all protected resources by passing it in via the 'Authorization'\
         \ header.\n\nA JWT token is generated by the API by either registering via\
